# ai-review-tryout

./: .gitignore  README.md
03_python_fastapi_project/: .envrc  README.md  pyproject.toml
03_python_fastapi_project/src/python_fastapi_project/: dependencies.py  main.py
03_python_fastapi_project/src/python_fastapi_project/api/: cart_api.py  product_api.py
03_python_fastapi_project/src/python_fastapi_project/domain/assembler/: cart_assembler.py  product_assembler.py
03_python_fastapi_project/src/python_fastapi_project/domain/dtos/: __init__.py  base_dto.py  cart_dto.py  product_dto.py
03_python_fastapi_project/src/python_fastapi_project/domain/models/: __init__.py  base.py  cart.py  product.py
03_python_fastapi_project/src/python_fastapi_project/repository/: database.py
03_python_fastapi_project/src/python_fastapi_project/repository/cart/: __init__.py  cart_repository.py  cart_repository_impl.py
03_python_fastapi_project/src/python_fastapi_project/repository/product/: product_repository.py  product_repository_impl.py
03_python_fastapi_project/src/python_fastapi_project/service/: cart_service.py  product_service.py
05_design/: .gitignore  README.md  index.html  package.json
05_design/src/: App.css  App.tsx  index.css
05_design/src/components/: AddProductModal.tsx  Cart.tsx  DeleteProductModal.tsx  EditProductModal.tsx  ProductCard.tsx  ViewProductModal.tsx
05_design/src/hooks/: useCart.ts  useProductModals.ts  useProducts.ts
05_design/src/services/: CartService.ts  ProductService.ts
05_design/src/types/: Cart.ts  Product.ts
