[project]
name = "python_fastapi_project"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiomysql>=0.2.0",
    "aiosqlite>=0.21.0",
    "cryptography>=46.0.2",
    "fastapi>=0.118.0",
    "greenlet>=3.2.4",
    "pydantic>=2.11.9",
    "pymysql>=1.1.2",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.37.0",
]

[tool.uv]
